--- a/IT School-ru/IT School/graphic-ru.html
+++ b/IT School-ru/IT School/graphic-ru.html
@@ -49,9 +49,9 @@
                     </div>
                     <div class="header-top-right mt-10">
                         <div class="header-link">
-                            <a class="notice" href="notice.html">Notice</a>
-                            <a class="login" href="login.html">Login</a>
-                            <a class="register" href="register.html">Register</a>
+                            <a class="notice" href="notice-ru.html">Notice</a>
+                            <a class="login" href="login-ru.html">Login</a>
+                            <a class="register" href="register-ru.html">Register</a>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-2 col-md-2">
                         <div class="header-logo">
-                            <a href="index.html"><img src="assets/images/logo.webp" width="80" alt="Logo"></a>
+                            <a href="index-ru.html"><img src="assets/images/logo.webp" width="80" alt="Logo"></a>
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-6 position-static">
@@ -71,29 +71,29 @@
                         <nav class="nav-menus-wrapper">
                             <ul class="nav-menu">
                                 <li>
-                                    <a href="index.html">Главная</a>
+                                    <a href="index-ru.html">Главная</a>
                                 </li>
                                 <li>
-                                    <a href="about-us.html">О нас</a>
+                                    <a href="about-us-ru.html">О нас</a>
                                 </li>
                                 <li>
-                                    <a class="active" href="our-courses-3.html">Курсы</a>
+                                    <a class="active" href="our-courses-3-ru.html">Курсы</a>
                                     <ul class="nav-dropdown nav-submenu">
-                                        <li><a href="frontend.html">Фронт-энд</a></li>
-                                        <li><a href="backend.html">Бэк-энд</a></li>
-                                        <li><a href="graphic.html">Графический дизайн</a></li>
-                                        <li><a href="foundation.html">Фундамент IT</a></li>
-                                        <li><a href="math.html">Математика</a></li>
+                                        <li><a href="frontend-ru.html">Фронт-энд</a></li>
+                                        <li><a href="backend-ru.html">Бэк-энд</a></li>
+                                        <li><a href="graphic-ru.html">Графический дизайн</a></li>
+                                        <li><a href="foundation-ru.html">Фундамент IT</a></li>
+                                        <li><a href="math-ru.html">Математика</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="teachers.html">Учителя</a>
+                                    <a href="teachers-ru.html">Учителя</a>
                                 </li>
                                 <li>
-                                    <a href="gallery.html">Галерея</a>
+                                    <a href="gallery-ru.html">Галерея</a>
                                 </li>
-                                <li><a href="register.html">Регистрация</a></li>
-                                <li><a href="contact.html">Контакты</a></li>
+                                <li><a href="register-ru.html">Регистрация</a></li>
+                                <li><a href="contact-ru.html">Контакты</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -121,7 +121,7 @@
         <div class="page-banner-bg bg_cover" style="background-image: url(assets/images/page-banner.webp);">
             <div class="container">
                 <div class="banner-content text-center">
-                    <h2 class="title">Бэк-энд</h2>
+                    <h2 class="title">Графический дизайн</h2>
                 </div>
             </div>
         </div>
@@ -138,25 +138,24 @@
                     <div class="courses-details-content mt-50">
                         <img src="assets/images/courses-details.webp" width="845" height="533" alt="Course Details">
 
-                        <h2 class="title">Бэк-энд</h2>
+                        <h2 class="title">Графический дизайн</h2>
 
-                        <p>Привет и добро пожаловать на Завершение окончательного курса веб-разработки 2022 Я инструктор Улугбек Закиров, и я буду ведущим
-                            вы через этот курс Вы всегда хотели научиться программировать, но не знаете, с чего начать? Вы не хотите
-                            делать удивительные веб-сайты и воплощать свои идеи в жизнь? Тогда назад Полный курс End Web Development 2022 для вас!
-                            Программирование — самый востребованный навык в 2022 году. Курс начинается с азов.</p>
+                        <p>Привет и добро пожаловать на курс мастер-класса по графическому дизайну. Я ваш инструктор Улугбек Закиров, и я проведу вас через
+                            этот курс Вы всегда хотели научиться создавать удивительные баннеры, листовки и что-то в цифровом искусстве, но не
+                            знаете с чего начать? Хотите сделать потрясающий дизайн и воплотить свои идеи в жизнь? Затем мастер-класс по графическому дизайну.
+                            Курс для вас! Графический дизайнер — самая востребованная профессия в 2022 году. Курс начинается с азов.</p>
 
                         <h5 class="sub-title">Беглый взгляд на курс</h5>
 
-                        <p>В этом курсе мы рассмотрим все, что вам нужно знать для создания веб-сайта с использованием Python, Django и многих других веб-приложений.
-                            технологии!
+                        <p>Вас пугает изучение фотошопа, иллюстратора, InDesign или Figma, и вы хотите учиться на практике в реальном мире
+                            проекты? Чем этот класс будет для вас!
                             
-                            Если вы хотите изменить карьеру, расширить свой текущий набор навыков, начать свой собственный предпринимательский бизнес, стать
-                            консультант, или просто хотите учиться, этот курс для вас!
+                            В этом курсе мы подробно рассмотрим типографику, теорию цвета, макет и композицию, как использовать фотографии в дизайне,
+                            обработка фотографий и редактирование, дизайн макета журнала, брендинг и дизайн логотипа, и это лишь некоторые из них.
                             
-                            Мы научим вас новейшим технологиям создания отличных веб-приложений с помощью Python 3.10.2 и Django 4! Но мы
-                            мы не просто учим этому, мы также учим тому, как создать пять разных проектов Django с нуля. Этот курс может быть
-                            ваш универсальный магазин всего, что вам нужно! Он послужит полезным справочником по многим вашим вопросам, когда вы начнете
-                            Ваш путь к тому, чтобы стать веб-разработчиком!</p>
+                            Мы также изучаем основы Adobe Photoshop, Illustrator, InDesign и Figma и делаем проекты с реальным миром.
+                            Приложения. Каждый дизайнер должен знать и осваивать эти программы, и этот курс гарантирует, что вы знаете основные
+                            инструменты для реализации удивительных проектов.</p>
 
                         <!-- <ul class="courses-details-list">
                             <li>
@@ -365,12 +364,12 @@
                                                     </ul>
                                                 </div>
                                                 <div class="teacher-image">
-                                                    <a href="teacher-details.html">
+                                                    <a href="teacher-details-ru.html">
                                                         <img src="assets/images/teachers/teacher-1.webp" alt="teacher">
                                                     </a>
                                                 </div>
                                                 <div class="teacher-content">
-                                                    <h4 class="name"><a href="teacher-details.html">Roberto Carlos</a></h4>
+                                                    <h4 class="name"><a href="teacher-details-ru.html">Roberto Carlos</a></h4>
                                                 </div>
                                             </div>
                                         </div>
@@ -385,12 +384,12 @@
                                                     </ul>
                                                 </div>
                                                 <div class="teacher-image">
-                                                    <a href="teacher-details.html">
+                                                    <a href="teacher-details-ru.html">
                                                         <img src="assets/images/teachers/teacher-2.webp" alt="teacher">
                                                     </a>
                                                 </div>
                                                 <div class="teacher-content">
-                                                    <h4 class="name"><a href="teacher-details.html">Roberto Carlos</a></h4>
+                                                    <h4 class="name"><a href="teacher-details-ru.html">Roberto Carlos</a></h4>
                                                 </div>
                                             </div>
                                         </div>
@@ -405,12 +404,12 @@
                                                     </ul>
                                                 </div>
                                                 <div class="teacher-image">
-                                                    <a href="teacher-details.html">
+                                                    <a href="teacher-details-ru.html">
                                                         <img src="assets/images/teachers/teacher-3.webp" alt="teacher">
                                                     </a>
                                                 </div>
                                                 <div class="teacher-content">
-                                                    <h4 class="name"><a href="teacher-details.html">Roberto Carlos</a></h4>
+                                                    <h4 class="name"><a href="teacher-details-ru.html">Roberto Carlos</a></h4>
                                                 </div>
                                             </div>
                                         </div>
@@ -534,15 +533,15 @@
                                 <h4 class="title">Особенности курса</h4>
                             </div>
                             <ul class="courses-features-items">
-                                <li>Цена за месяц <strong>480 000 сумов</strong></li>
-                                <li>Продолжительность <strong>6 месяцев</strong></li>
-                                <li>Проекты <strong>8+</strong></li>
-                                <li>Викторины <strong>5</strong></li>
+                                <li>Цена за месяц <strong>400 000 сумов</strong></li>
+                                <li>Продолжительность <strong>4 месяца</strong></li>
+                                <li>Проекты <strong>30+</strong></li>
+                                <li>Викторины <strong>10</strong></li>
                                 <li>Максимальное количество повторных попыток <strong>5</strong></li>
-                                <li>Оценка <strong>4.92(20 отзывов)</strong></li>
+                                <li>Оценка <strong>4.8(10 отзывов)</strong></li>
                             </ul>
                             <div class="sidebar-btn">
-                                <a class="main-btn" href="./register.html">Записаться на курс</a>
+                                <a class="main-btn" href="./register-ru.html">Записаться на курс</a>
                             </div>
                         </div>
 
@@ -597,9 +596,9 @@
                         <div class="footer-link mt-45">
                             <h4 class="footer-title">Наш центр</h4>
                             <ul class="link-list">
-                                <li><a href="about-us.html">О нас</a></li>
-                                <li><a href="gallery.html">Галерея</a></li>
-                                <li><a href="teachers.html">Учителя</a></li>
+                                <li><a href="about-us-ru.html">О нас</a></li>
+                                <li><a href="gallery-ru.html">Галерея</a></li>
+                                <li><a href="teachers-ru.html">Учителя</a></li>
                             </ul>
                         </div>
                     </div>
@@ -607,11 +606,11 @@
                         <div class="footer-link mt-45">
                             <h4 class="footer-title">Курсы</h4>
                             <ul class="link-list">
-                                <li><a href="frontend.html">Фронт-энд</a></li>
-                                <li><a href="backend.html">Бэк-энд</a></li>
-                                <li><a href="graphic.html">Графический дизайн</a></li>
-                                <li><a href="foundation.html">Фундамент для IT</a></li>
-                                <li><a href="math.html">Математика</a></li>
+                                <li><a href="frontend-ru.html">Фронт-энд</a></li>
+                                <li><a href="backend-ru.html">Бэк-энд</a></li>
+                                <li><a href="graphic-ru.html">Графический дизайн</a></li>
+                                <li><a href="foundation-ru.html">Фундамент для IT</a></li>
+                                <li><a href="math-ru.html">Математика</a></li>
                             </ul>
                         </div>
                     </div>
@@ -619,12 +618,12 @@
                         <div class="footer-link mt-45">
                             <h4 class="footer-title">Полезная ссылка</h4>
                             <ul class="link-list">
-                                <li><a href="index.html">Главная</a></li>
-                                <li><a href="about-us.html">О нас</a></li>
-                                <li><a href="our-courses-3.html">Курсы</a></li>
-                                <li><a href="teachers.html">Учителя</a></li>
-                                <li><a href="gallery.html">Галерея</a></li>
-                                <li><a href="register.html">Регистрация</a></li>
+                                <li><a href="index-ru.html">Главная</a></li>
+                                <li><a href="about-us-ru.html">О нас</a></li>
+                                <li><a href="our-courses-3-ru.html">Курсы</a></li>
+                                <li><a href="teachers-ru.html">Учителя</a></li>
+                                <li><a href="gallery-ru.html">Галерея</a></li>
+                                <li><a href="register-ru.html">Регистрация</a></li>
                             </ul>
                         </div>
                     </div>
@@ -715,5 +714,5 @@
 </body>
 
 
-<!-- Mirrored from template.hasthemes.com/edumate-v1/edumate/courses-details.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 12 Feb 2022 16:27:29 GMT -->
+<!-- Mirrored from template.hasthemes.com/edumate-v1/edumate/courses-details-ru.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 12 Feb 2022 16:27:29 GMT -->
 </html>
