--- a/IT School-ru/IT School/teachers-ru.html
+++ b/IT School-ru/IT School/teachers-ru.html
@@ -50,9 +50,9 @@
                     </div>
                     <div class="header-top-right mt-10">
                         <div class="header-link">
-                            <a class="notice" href="notice.html">Notice</a>
-                            <a class="login" href="login.html">Login</a>
-                            <a class="register" href="register.html">Register</a>
+                            <a class="notice" href="notice-ru.html">Notice</a>
+                            <a class="login" href="login-ru.html">Login</a>
+                            <a class="register" href="register-ru.html">Register</a>
                         </div>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-2 col-md-2">
                         <div class="header-logo">
-                            <a href="index.html"><img src="assets/images/logo.webp" width="80" alt="Logo"></a>
+                            <a href="index-ru.html"><img src="assets/images/logo.webp" width="80" alt="Logo"></a>
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-6 position-static">
@@ -72,29 +72,29 @@
                         <nav class="nav-menus-wrapper">
                             <ul class="nav-menu">
                                 <li>
-                                    <a href="index.html">Главная</a>
+                                    <a href="index-ru.html">Главная</a>
                                 </li>
                                 <li>
-                                    <a href="about-us.html">О нас</a>
+                                    <a href="about-us-ru.html">О нас</a>
                                 </li>
                                 <li>
-                                    <a href="our-courses-3.html">Курсы</a>
+                                    <a href="our-courses-3-ru.html">Курсы</a>
                                     <ul class="nav-dropdown nav-submenu">
-                                        <li><a href="frontend.html">Фронт-энд</a></li>
-                                        <li><a href="backend.html">Бэк-энд</a></li>
-                                        <li><a href="graphic.html">Графический дизайн</a></li>
-                                        <li><a href="foundation.html">Фундамент IT</a></li>
-                                        <li><a href="math.html">Математика</a></li>
+                                        <li><a href="frontend-ru.html">Фронт-энд</a></li>
+                                        <li><a href="backend-ru.html">Бэк-энд</a></li>
+                                        <li><a href="graphic-ru.html">Графический дизайн</a></li>
+                                        <li><a href="foundation-ru.html">Фундамент IT</a></li>
+                                        <li><a href="math-ru.html">Математика</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a class="active" href="teachers.html">Учителя</a>
+                                    <a class="active" href="teachers-ru.html">Учителя</a>
                                 </li>
                                 <li>
-                                    <a href="gallery.html">Галерея</a>
+                                    <a href="gallery-ru.html">Галерея</a>
                                 </li>
-                                <li><a href="register.html">Регистрация</a></li>
-                                <li><a href="contact.html">Контакты</a></li>
+                                <li><a href="register-ru.html">Регистрация</a></li>
+                                <li><a href="contact-ru.html">Контакты</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -146,12 +146,12 @@
                             </ul>
                         </div>
                         <div class="teacher-image">
-                            <a href="teacher-details.html">
+                            <a href="teacher-details-ru.html">
                                 <img src="assets/images/teachers/teacher-1.webp" width="266" height="359" alt="teacher">
                             </a>
                         </div>
                         <div class="teacher-content">
-                            <h4 class="name"><a href="teacher-details.html">Roberto Carlos</a></h4>
+                            <h4 class="name"><a href="teacher-details-ru.html">Roberto Carlos</a></h4>
                             <span class="designation">Лектор естественных наук</span>
                         </div>
                     </div>
@@ -167,12 +167,12 @@
                             </ul>
                         </div>
                         <div class="teacher-image">
-                                <a href="teacher-details.html">
+                                <a href="teacher-details-ru.html">
                                 <img src="assets/images/teachers/teacher-2.webp" width="266" height="359" alt="teacher">
                             </a>
                         </div>
                         <div class="teacher-content">
-                            <h4 class="name"><a href="teacher-details.html">Roberto Carlos</a></h4>
+                            <h4 class="name"><a href="teacher-details-ru.html">Roberto Carlos</a></h4>
                             <span class="designation">Лектор естественных наук</span>
                         </div>
                     </div>
@@ -188,12 +188,12 @@
                             </ul>
                         </div>
                         <div class="teacher-image">
-                                <a href="teacher-details.html">
+                                <a href="teacher-details-ru.html">
                                 <img src="assets/images/teachers/teacher-3.webp" width="266" height="359" alt="teacher">
                             </a>
                         </div>
                         <div class="teacher-content">
-                            <h4 class="name"><a href="teacher-details.html">Roberto Carlos</a></h4>
+                            <h4 class="name"><a href="teacher-details-ru.html">Roberto Carlos</a></h4>
                             <span class="designation">Лектор естественных наук</span>
                         </div>
                     </div>
@@ -209,12 +209,12 @@
                             </ul>
                         </div>
                         <div class="teacher-image">
-                                <a href="teacher-details.html">
+                                <a href="teacher-details-ru.html">
                                 <img src="assets/images/teachers/teacher-4.webp" width="266" height="359" alt="teacher">
                             </a>
                         </div>
                         <div class="teacher-content">
-                            <h4 class="name"><a href="teacher-details.html">Alex Fargunes</a></h4>
+                            <h4 class="name"><a href="teacher-details-ru.html">Alex Fargunes</a></h4>
                             <span class="designation">Профессор химии </span>
                         </div>
                     </div>
@@ -230,12 +230,12 @@
                             </ul>
                         </div>
                         <div class="teacher-image">
-                                <a href="teacher-details.html">
+                                <a href="teacher-details-ru.html">
                                 <img src="assets/images/teachers/teacher-5.webp" width="266" height="359" alt="teacher">
                             </a>
                         </div>
                         <div class="teacher-content">
-                            <h4 class="name"><a href="teacher-details.html">Rehana Smith</a></h4>
+                            <h4 class="name"><a href="teacher-details-ru.html">Rehana Smith</a></h4>
                             <span class="designation">лектор</span>
                         </div>
                     </div>
@@ -251,12 +251,12 @@
                             </ul>
                         </div>
                         <div class="teacher-image">
-                                <a href="teacher-details.html">
+                                <a href="teacher-details-ru.html">
                                 <img src="assets/images/teachers/teacher-6.webp" width="266" height="359" alt="teacher">
                             </a>
                         </div>
                         <div class="teacher-content">
-                            <h4 class="name"><a href="teacher-details.html">Julia Williams</a></h4>
+                            <h4 class="name"><a href="teacher-details-ru.html">Julia Williams</a></h4>
                             <span class="designation">Лектор естественных наук</span>
                         </div>
                     </div>
@@ -272,12 +272,12 @@
                             </ul>
                         </div>
                         <div class="teacher-image">
-                                <a href="teacher-details.html">
+                                <a href="teacher-details-ru.html">
                                 <img src="assets/images/teachers/teacher-7.webp" width="266" height="359" alt="teacher">
                             </a>
                         </div>
                         <div class="teacher-content">
-                            <h4 class="name"><a href="teacher-details.html">Zara Thomson</a></h4>
+                            <h4 class="name"><a href="teacher-details-ru.html">Zara Thomson</a></h4>
                             <span class="designation">Профессор математики</span>
                         </div>
                     </div>
@@ -293,12 +293,12 @@
                             </ul>
                         </div>
                         <div class="teacher-image">
-                                <a href="teacher-details.html">
+                                <a href="teacher-details-ru.html">
                                 <img src="assets/images/teachers/teacher-8.webp" width="266" height="359" alt="teacher">
                             </a>
                         </div>
                         <div class="teacher-content">
-                            <h4 class="name"><a href="teacher-details.html">Stev Morgan</a></h4>
+                            <h4 class="name"><a href="teacher-details-ru.html">Stev Morgan</a></h4>
                             <span class="designation">Преподаватель английского языка</span>
                         </div>
                     </div>
@@ -314,12 +314,12 @@
                             </ul>
                         </div>
                         <div class="teacher-image">
-                                <a href="teacher-details.html">
+                                <a href="teacher-details-ru.html">
                                 <img src="assets/images/teachers/teacher-3.webp" width="266" height="359" alt="teacher">
                             </a>
                         </div>
                         <div class="teacher-content">
-                            <h4 class="name"><a href="teacher-details.html">Nicolus Lisa</a></h4>
+                            <h4 class="name"><a href="teacher-details-ru.html">Nicolus Lisa</a></h4>
                             <span class="designation">Лектор естественных наук</span>
                         </div>
                     </div>
@@ -368,9 +368,9 @@
                         <div class="footer-link mt-45">
                             <h4 class="footer-title">Наш центр</h4>
                             <ul class="link-list">
-                                <li><a href="about-us.html">О нас</a></li>
-                                <li><a href="gallery.html">Галерея</a></li>
-                                <li><a href="teachers.html">Учителя</a></li>
+                                <li><a href="about-us-ru.html">О нас</a></li>
+                                <li><a href="gallery-ru.html">Галерея</a></li>
+                                <li><a href="teachers-ru.html">Учителя</a></li>
                             </ul>
                         </div>
                     </div>
@@ -378,11 +378,11 @@
                         <div class="footer-link mt-45">
                             <h4 class="footer-title">Курсы</h4>
                             <ul class="link-list">
-                                <li><a href="frontend.html">Фронт-энд</a></li>
-                                <li><a href="backend.html">Бэк-энд</a></li>
-                                <li><a href="graphic.html">Графический дизайн</a></li>
-                                <li><a href="foundation.html">Фундамент для IT</a></li>
-                                <li><a href="math.html">Математика</a></li>
+                                <li><a href="frontend-ru.html">Фронт-энд</a></li>
+                                <li><a href="backend-ru.html">Бэк-энд</a></li>
+                                <li><a href="graphic-ru.html">Графический дизайн</a></li>
+                                <li><a href="foundation-ru.html">Фундамент для IT</a></li>
+                                <li><a href="math-ru.html">Математика</a></li>
                             </ul>
                         </div>
                     </div>
@@ -390,12 +390,12 @@
                         <div class="footer-link mt-45">
                             <h4 class="footer-title">Полезная ссылка</h4>
                             <ul class="link-list">
-                                <li><a href="index.html">Главная</a></li>
-                                <li><a href="about-us.html">о нас</a></li>
-                                <li><a href="our-courses-3.html">Курсы</a></li>
-                                <li><a href="teachers.html">Учителя</a></li>
-                                <li><a href="gallery.html">Галерея</a></li>
-                                <li><a href="register.html">Регистрация</a></li>
+                                <li><a href="index-ru.html">Главная</a></li>
+                                <li><a href="about-us-ru.html">о нас</a></li>
+                                <li><a href="our-courses-3-ru.html">Курсы</a></li>
+                                <li><a href="teachers-ru.html">Учителя</a></li>
+                                <li><a href="gallery-ru.html">Галерея</a></li>
+                                <li><a href="register-ru.html">Регистрация</a></li>
                             </ul>
                         </div>
                     </div>
@@ -486,5 +486,5 @@
 </body>
 
 
-<!-- Mirrored from template.hasthemes.com/edumate-v1/edumate/teachers.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 12 Feb 2022 16:27:31 GMT -->
+<!-- Mirrored from template.hasthemes.com/edumate-v1/edumate/teachers-ru.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 12 Feb 2022 16:27:31 GMT -->
 </html>
