--- a/IT School-ru/IT School/gallery-ru.html
+++ b/IT School-ru/IT School/gallery-ru.html
@@ -49,9 +49,9 @@
                     </div>
                     <div class="header-top-right mt-10">
                         <div class="header-link">
-                            <a class="notice" href="notice.html">Notice</a>
-                            <a class="login" href="login.html">Login</a>
-                            <a class="register" href="register.html">Register</a>
+                            <a class="notice" href="notice-ru.html">Notice</a>
+                            <a class="login" href="login-ru.html">Login</a>
+                            <a class="register" href="register-ru.html">Register</a>
                         </div>
                     </div>
                 </div>
@@ -63,7 +63,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-2 col-md-2">
                         <div class="header-logo">
-                            <a href="index.html"><img src="assets/images/logo.webp" width="80" alt="Logo"></a>
+                            <a href="index-ru.html"><img src="assets/images/logo.webp" width="80" alt="Logo"></a>
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-6 position-static">
@@ -71,29 +71,29 @@
                         <nav class="nav-menus-wrapper">
                             <ul class="nav-menu">
                                 <li>
-                                    <a href="index.html">Главная</a>
+                                    <a href="index-ru.html">Главная</a>
                                 </li>
                                 <li>
-                                    <a href="about-us.html">О нас</a>
+                                    <a href="about-us-ru.html">О нас</a>
                                 </li>
                                 <li>
-                                    <a href="our-courses-3.html">Курсы</a>
+                                    <a href="our-courses-3-ru.html">Курсы</a>
                                     <ul class="nav-dropdown nav-submenu">
-                                        <li><a href="frontend.html">Фронт-энд</a></li>
-                                        <li><a href="backend.html">Бэк-энд</a></li>
-                                        <li><a href="graphic.html">Графический дизайн</a></li>
-                                        <li><a href="foundation.html">Фундамент IT</a></li>
-                                        <li><a href="math.html">Математика</a></li>
+                                        <li><a href="frontend-ru.html">Фронт-энд</a></li>
+                                        <li><a href="backend-ru.html">Бэк-энд</a></li>
+                                        <li><a href="graphic-ru.html">Графический дизайн</a></li>
+                                        <li><a href="foundation-ru.html">Фундамент IT</a></li>
+                                        <li><a href="math-ru.html">Математика</a></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="teachers.html">Учителя</a>
+                                    <a href="teachers-ru.html">Учителя</a>
                                 </li>
                                 <li>
-                                    <a class="active" href="gallery.html">Галерея</a>
+                                    <a class="active" href="gallery-ru.html">Галерея</a>
                                 </li>
-                                <li><a href="register.html">Регистрация</a></li>
-                                <li><a href="contact.html">Контакты</a></li>
+                                <li><a href="register-ru.html">Регистрация</a></li>
+                                <li><a href="contact-ru.html">Контакты</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -269,9 +269,9 @@
                         <div class="footer-link mt-45">
                             <h4 class="footer-title">Наш центр</h4>
                             <ul class="link-list">
-                                <li><a href="about-us.html">О нас</a></li>
-                                <li><a href="gallery.html">Галерея</a></li>
-                                <li><a href="teachers.html">Учителя</a></li>
+                                <li><a href="about-us-ru.html">О нас</a></li>
+                                <li><a href="gallery-ru.html">Галерея</a></li>
+                                <li><a href="teachers-ru.html">Учителя</a></li>
                             </ul>
                         </div>
                     </div>
@@ -279,11 +279,11 @@
                         <div class="footer-link mt-45">
                             <h4 class="footer-title">Курсы</h4>
                             <ul class="link-list">
-                                <li><a href="frontend.html">Фронт-энд</a></li>
-                                <li><a href="backend.html">Бэк-энд</a></li>
-                                <li><a href="graphic.html">Графический дизайн</a></li>
-                                <li><a href="foundation.html">Фундамент для IT</a></li>
-                                <li><a href="math.html">Математика</a></li>
+                                <li><a href="frontend-ru.html">Фронт-энд</a></li>
+                                <li><a href="backend-ru.html">Бэк-энд</a></li>
+                                <li><a href="graphic-ru.html">Графический дизайн</a></li>
+                                <li><a href="foundation-ru.html">Фундамент для IT</a></li>
+                                <li><a href="math-ru.html">Математика</a></li>
                             </ul>
                         </div>
                     </div>
@@ -291,12 +291,12 @@
                         <div class="footer-link mt-45">
                             <h4 class="footer-title">Полезная ссылка</h4>
                             <ul class="link-list">
-                                <li><a href="index.html">Главная</a></li>
-                                <li><a href="about-us.html">О нас</a></li>
-                                <li><a href="our-courses-3.html">Курсы</a></li>
-                                <li><a href="teachers.html">Учителя</a></li>
-                                <li><a href="gallery.html">Галерея</a></li>
-                                <li><a href="register.html">=Регистрация</a></li>
+                                <li><a href="index-ru.html">Главная</a></li>
+                                <li><a href="about-us-ru.html">О нас</a></li>
+                                <li><a href="our-courses-3-ru.html">Курсы</a></li>
+                                <li><a href="teachers-ru.html">Учителя</a></li>
+                                <li><a href="gallery-ru.html">Галерея</a></li>
+                                <li><a href="register-ru.html">=Регистрация</a></li>
                             </ul>
                         </div>
                     </div>
@@ -387,5 +387,5 @@
 </body>
 
 
-<!-- Mirrored from template.hasthemes.com/edumate-v1/edumate/gallery.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 12 Feb 2022 16:27:36 GMT -->
+<!-- Mirrored from template.hasthemes.com/edumate-v1/edumate/gallery-ru.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 12 Feb 2022 16:27:36 GMT -->
 </html>
