--- a/IT-SCHOOL-WEB-SITE — uzb/backend-uzb.html
+++ b/IT-SCHOOL-WEB-SITE — uzb/backend-uzb.html
@@ -77,7 +77,7 @@
                                     <a href="about-us-uzb.html">Biz Haqimizda</a>
                                 </li>
                                 <li>
-                                    <a href="our-courses-3-uzb.html">Kurslar</a>
+                                    <a  class="active" href="our-courses-3-uzb.html">Kurslar</a>
                                     <ul class="nav-dropdown nav-submenu">
                                         <li><a href="frontend-uzb.html">Frontend</a></li>
                                         <li><a href="backend-uzb.html">Backend</a></li>
@@ -87,7 +87,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a class="active" href="teachers-uzb.html">O'qituvchilar</a>
+                                    <a href="teachers-uzb.html">O'qituvchilar</a>
                                 </li>
                                 <li>
                                     <a href="gallery-uzb.html">Rasmlar</a>
