--- a/IT-SCHOOL-WEB-SITE — uzb/index-uzb.html
+++ b/IT-SCHOOL-WEB-SITE — uzb/index-uzb.html
@@ -72,7 +72,7 @@
                         <nav class="nav-menus-wrapper">
                             <ul class="nav-menu">
                                 <li>
-                                    <a href="index-uzb.html">Asosiy</a>
+                                    <a class="active" href="index-uzb.html">Asosiy</a>
                                 </li>
                                 <li>
                                     <a href="about-us-uzb.html">Biz Haqimizda</a>
@@ -88,7 +88,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a class="active" href="teachers-uzb.html">O'qituvchilar</a>
+                                    <a href="teachers-uzb.html">O'qituvchilar</a>
                                 </li>
                                 <li>
                                     <a href="gallery-uzb.html">Rasmlar</a>
