--- a/IT-SCHOOL-WEB-SITE — uzb/about-us-uzb.html
+++ b/IT-SCHOOL-WEB-SITE — uzb/about-us-uzb.html
@@ -75,7 +75,7 @@
                                     <a href="index-uzb.html">Asosiy</a>
                                 </li>
                                 <li>
-                                    <a href="about-us-uzb.html">Biz Haqimizda</a>
+                                    <a class="active" href="about-us-uzb.html">Biz Haqimizda</a>
                                 </li>
                                 <li>
                                     <a href="our-courses-3-uzb.html">Kurslar</a>
@@ -88,7 +88,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a class="active" href="teachers-uzb.html">O'qituvchilar</a>
+                                    <a href="teachers-uzb.html">O'qituvchilar</a>
                                 </li>
                                 <li>
                                     <a href="gallery-uzb.html">Rasmlar</a>
