--- a/IT-SCHOOL-WEB-SITE — uzb/gallery-uzb.html
+++ b/IT-SCHOOL-WEB-SITE — uzb/gallery-uzb.html
@@ -87,10 +87,10 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a class="active" href="teachers-uzb.html">O'qituvchilar</a>
+                                    <a href="teachers-uzb.html">O'qituvchilar</a>
                                 </li>
                                 <li>
-                                    <a href="gallery-uzb.html">Rasmlar</a>
+                                    <a class="active" href="gallery-uzb.html">Rasmlar</a>
                                 </li>
                                 <li><a href="register-uzb.html">Registratsiya</a></li>
                                 <li><a href="contact-uzb.html">Kontaktlar</a></li>
